    ArgumentError, rather than UnmappedClassError.
    [ticket:2196]

  - New event hook, MapperEvents.after_configured().  
    Called after a configure() step has completed and
    mappers were in fact affected.   Theoretically this
    event is called once per application, unless new mappings
    are constructed after existing ones have been used
    already.

  - New declarative features:
        - __declare_last__() method, establishes an event
        listener for the class method that will be called
        when mappers are completed with the final "configure"
        step.
        - __abstract__ flag.   The class will not be mapped
        at all when this flag is present on the class.
        - New helper classes ConcreteBase, AbstractConcreteBase.
        Allow concrete mappings using declarative which automatically
        set up the "polymorphic_union" when the "configure"
        mapper step is invoked.
        - The mapper itself has semi-private methods that allow
        the "with_polymorphic" selectable to be assigned
        to the mapper after it has already been configured.
        [ticket:2239]

   - The integer "id" used to link a mapped instance with
     its owning Session is now generated by a sequence
     generation function rather than id(Session), to
     eliminate the possibility of recycled id() values 
     causing an incorrect result, no need to check that 
     object actually in the session.  [ticket:2280]

-sql
  - Behavioral improvement: empty
    conjunctions such as and_() and or_() will be
    flattened in the context of an enclosing conjunction,
    i.e. and_(x, or_()) will produce 'X' and not 'X AND
    ()'. [ticket:2257].

  - Fixed bug regarding calculation of "from" list 
    for a select() element.  The "from" calc is now
    delayed, so that if the construct uses a Column
    object that is not yet attached to a Table,
    but is later associated with a Table, it generates